# roxt

./: Cargo.toml  LICENSE  README.md
lox/: closure.lox  fib.lox
src/: environment.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  resolver.rs  tokens.rs
src/ast/: atom.rs  expr.rs  mod.rs  program.rs
src/bytecode/: chunk.rs  compiler.rs  lexer.rs  main.rs  memory.rs  object.rs  value.rs  vm.rs
src/interpreter/: environment.rs  interpreter.rs  main.rs  parser.rs  resolver.rs
src/interpreter/ast/: atom.rs  mod.rs  program.rs
