[package]
name = "roxt"
version = "0.1.0"
authors = ["Trevor Arjeski <tmarjeski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "roxt"
path = "src/interpreter/main.rs"
test = true
bench = false

[[bin]]
name = "roxtc"
path = "src/bytecode/main.rs"
test = true
bench = false

[dependencies]
anyhow = "1.0"
argh = "0.1.3"
thiserror = "1.0"